tests/snapshots/run_file__addition.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/addition.bend
---
NumScott:
10

Scott:
10
