tests/snapshots/run_file__addition.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/addition.hvm
---
Strict mode:

Result: 10
- ITRS: 6
- TIME: 0.00s
- MIPS: 5.81
