tests/snapshots/run_file__adt_match.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/adt_match.bend
---
NumScott:
λa (a Opt/Some/tag 2)

Scott:
λa λ* (a 2)
