tests/snapshots/run_file__adt_match.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/adt_match.hvm
---
Lazy mode:

(Some 2)

Strict mode:

(Some 2)
