tests/snapshots/run_file__adt_match_wrong_tag.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/adt_match_wrong_tag.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/run_file/adt_match_wrong_tag.bend :
[1m- expected:[0m Term - Lambda or Application or Tuple or Operation or List or Tree or Sup or Unscoped Var or Eraser or String or Char or Symbol or Number or Use or Let or Def or If or Match or Switch or With or Fold or Bend or Open or Var
[1m- detected:[0m end of input
[0m  4 | [4m[31m [0m
