tests/snapshots/run_file__adt_match_wrong_tag.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/adt_match_wrong_tag.hvm
---
Readback Warning:
Unexpected tag found during Adt readback, expected '#Option.Some.val', but found '#wrong_tag'

λa match a { (Some c): #Option.Some.val (#wrong_tag λb b c); (None): * }
