tests/snapshots/run_file__adt_wrong_tag.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/adt_wrong_tag.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/run_file/adt_wrong_tag.bend[0m[1m :[0m
[1m- expected:[0m term
[1m- detected:[0m end of input
[0m  4 | [4m[31m [0m
