tests/snapshots/run_file__adt_wrong_tag.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/adt_wrong_tag.hvm
---
Lazy mode:
Warnings:
During readback:
  Unexpected tag found during Adt readback, expected '#Option', but found '#wrong_tag'.

λa match a = a { Some: #Option (#wrong_tag λb b a.val); None: * }

Strict mode:
Warnings:
During readback:
  Unexpected tag found during Adt readback, expected '#Option', but found '#wrong_tag'.

λa match a = a { Some: #Option (#wrong_tag λb b a.val); None: * }
