tests/snapshots/run_file__and.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/and.bend
---
NumScott:
bool/false

Scott:
bool/false
